--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site Info
-title: Codinfox Lanyon
-tagline: 'A Jekyll theme based on Lanyon'
-description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
+title: '해리의 개발공부로그'
+tagline: '해리의 개발공부로그'
+description: '프로그래밍을 공부하며 배운점을 정리하고 기록하는 곳입니다'
 baseurl: ""
-url: http://codinfox.github.io
+url: https://tothefullest08.github.io/
 logo: '/public/logo.png'
 
 # Site configurations
@@ -23,29 +23,32 @@ version: 1.0.0
 
 # About/contact
 author:
-  name: Codinfox
-  description: A passionate <strong>developer and researcher</strong>, learning to be a giant.
-  gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
+  name: Lee HYUN SOO
+  description: Harry.
+  # gravatar: 3c2986ad7ac1f2230ea3596f44563328 # md5 hash of your email address
   contact:
-    linkedin:  https://www.linkedin.com/in/lizhihao
-    github:    https://github.com/codinfox
+    # linkedin:  https://www.linkedin.com/in/lizhihao
+    github:    https://github.com/tothefullest08
     # facebook:  <hide>
-    twitter:   https://twitter.com/Li_Zhihao
-    weibo:     http://weibo.com/41173780
-    email:     http://www.google.com/recaptcha/mailhide/d?k=01I3lZFiZYng9N3QxYEtsDaQ==&c=31wAnZkuKqcG0ATAqJN8Z3ln5kkYLA9TwkGc-IbygpM=
+    # twitter:   https://twitter.com/Li_Zhihao
+    # weibo:     http://weibo.com/41173780
+    email:     mailto:tothefullest08@gmail.com
 
 # Navigation (2nd level links supported)
 nav:
   Home:           
-    - '/'
+    - '/blog'
   Blog:           
-    - '/blog/'
-    - { Categories: '/blog/categories/' }
-    - { Tags: '/blog/tags/' }
+    - '/'
+    # - { Categories All: '/blog/categories/' }
+    - { TIL (Today I Learned): '/blog/categories/#til' }
+    - { Django: '/blog/categories/#django' }
+    - { Python: '/blog/categories/#python' }
+    - { etc: '/blog/categories/#etc' }    
   About:          
     - '/about/'
-  Github Project: 
-    - 'http://codinfox.github.io/'
+  Search: 
+    - '/search/'
 
 # Where are tags and categories displayed
 tag_page: '/blog/tags/'
@@ -58,5 +61,5 @@ hero:
 # Puglins
 mathjax: true # whether support mathjax
 google_analytics_token: 'UA-00000000-1' # leave blank if you don't want google analytics
-disqus_short_name: 'your_short_name' # leave blank if you don't want disqus
+disqus_short_name: 'tothefullest08-github-io' # leave blank if you don't want disqus
 
