190625 | TIL | JS | 기본문법(1) - HTML조작, 변수, 자료형, 조건*반복

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ nav:
     - { TIL: '/blog/categories/#TIL' }
     - { Django: '/blog/categories/#Django' }
     - { Python: '/blog/categories/#python' }
+    - { Javascript: '/blog/categories/#Javascript' }
     - { Web: '/blog/categories/#Web' }
     - { Git: '/blog/categories/#Git' }
     - { Algorithm: '/blog/categories/#Algorithm' }
