php README UPDATE

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,7 @@ nav:
   Blog:           
     - '/'
     # - { Categories All: '/blog/categories/' }
+    - { PHP: '/blog/categories/#PHP' }
     - { Algorithm: '/blog/categories/#Algorithm' }
     - { Algorithm_BJ: '/blog/categories/#AlgorithmBJ' }
     - { TIL: '/blog/categories/#TIL' }
